--- a/src/Figure.3/progress_heatmap.Rmd
+++ b/src/Figure.3/progress_heatmap.Rmd
@@ -227,20 +227,24 @@ nk.t.markers  %>% dplyr::filter(pct.1 > 0.1 & p_val_adj < 0.1 & avg_log2FC> 1)  
 
 #Dotplot of NK/T lncRNAs upregulated in mCRPC
 query <- up %>% dplyr::filter(Cluster == "NK/T") %>% .$Genes
-p1 <- DotPlot(object = nk.t, features = query, group.by ="cluster.dominant.cell.type" ) + coord_flip() + theme(axis.text.x = element_text(size = 8, angle = 90))
+p1 <- DotPlot(object = nk.t, features = query, group.by ="cluster.dominant.cell.type" ) + coord_flip() + theme(axis.text.x = element_text(size = 15, angle = 90))+ theme( text = element_text(size = 20))
 #Exhausted T cell markers from He et al. 
 ex <- c("PDCD1", "HAVCR2", "TOX", "TIGIT", "ICOS", "FASLG", "LAG3", "ENTPD1","ITGAE")
 #Scoring exhausted markers in mCRPC deep RNA-seq data
-exhaust =  gsva(t(mcrpc_rna), gset.idx.list = list(ex), method = 'zscore')
+row.names(mcrpc_rna) <- mcrpc_rna$cases
+mcrpc_rna <- mcrpc_rna[,-1]
+mat <- mcrpc_rna[, colnames(mcrpc_rna) %in% c(ex, "CYTOR", "MIAT")]
+exhaust =  gsva(t(mat), gset.idx.list = list(ex), method = 'zscore')
 #Scoring MIAT and CYTOR
-gex = gsva(t(mcrpc_rna), gset.idx.list = list(c("CYTOR", "MIAT")), method = 'zscore')
+gex = gsva(t(mat), gset.idx.list = list(c("CYTOR", "MIAT")), method = 'zscore')
 #Correlation plot of MIAT and CYTOR with exhausted T cell markers
-p2 <- data.frame(GEX= t(gex),Exhausted.markers=t(exhaust) ) %>% ggplot(aes(x = GEX, y = Exhausted.markers)) + geom_point() + geom_smooth(method = 'lm') + stat_cor() + xlab("CYTOR + MIAT") + theme_classic()
+p2 <- data.frame(GEX= t(gex),Exhausted.markers=t(exhaust) ) %>% ggplot(aes(x = GEX, y = Exhausted.markers)) + geom_point() + geom_smooth(method = 'lm') + stat_cor(size = 7) + xlab("CYTOR + MIAT") + theme_classic() + theme( text = element_text(size = 20))
 #Plotting
-pdf("/Users/ds/Desktop/plot.pdf", width = 5)
-p1 +p2
+pdf("/Users/ds/Desktop/plot.pdf")
+p2
 dev.off()
 
+p1
 ```
 
 
