--- a/src/Figure.3/Progress_Gviz.Rmd
+++ b/src/Figure.3/Progress_Gviz.Rmd
@@ -37,7 +37,7 @@ dss <- dss %>% dplyr::filter(chrom == chr) %>% dplyr::select(-Stat) %>% mutate(D
 
 #Create DMR tracks
 dTrack <- DataTrack(dss, name = "Methylation", background.title = 'purple4', fill = 'purple4')
-plotTracks(list(dTrack), from = start(target), to = end(target), type = c("histogram"), ylim = c(-30,0))
+#plotTracks(list(dTrack), from = start(target), to = end(target), type = c("histogram"), ylim = c(-30,0))
 
 ```
 
@@ -82,12 +82,12 @@ atrack <- AnnotationTrack(hmr, name = "HMR", background.title = 'darkred',  back
 arbtrack <- AnnotationTrack(metarbs, name = "ARBS", background.title = 'darkgreen' , background.panel = "lightgrey", fill = 'darkgreen', col = 'darkgreen')
 atactrack <- AnnotationTrack(h3ac, name = "H3K27ac", background.title = 'black' , background.panel = "lightgrey", fill = 'black', col = 'black')
 gtrack <- GenomeAxisTrack()
-itrack <- IdeogramTrack(genome = "hg38", chromosome = chr)
+#itrack <- IdeogramTrack(genome = "hg38", chromosome = chr)
 
 
 
 pdf("/Users/ds/Desktop/plot.pdf", width = 10, height = 10)
-plotTracks(list(gtrack, dTrack,arbtrack, atactrack, atrack, grtrack), from = start(target), to = end(target), type = "histogram",ylim = c(-30,0), cex.title = 1.3)
+plotTracks(list(gtrack, dTrack,arbtrack, atactrack, atrack, grtrack), from = start(target), to = end(target), type = "histogram",ylim = c(-30,0), cex.title = 1.3, sizes=c(1,2,1,1,1,1))
 dev.off()   
            
 
