--- a/src/Figure.3/progress_DEG_analysis.Rmd
+++ b/src/Figure.3/progress_DEG_analysis.Rmd
@@ -192,7 +192,7 @@ write.csv(x = bulk_deg, file = "/Users/ds/Desktop/Supplementary.Table2.csv",quot
 ```{r}
 
 #Read in bulk DEG results between mCRPC and PRAD
-bulk_deg <- read.table(file = "//Users/ds/Desktop/projects/lncRNA/results/mCRPC_PRAD_deg.txt", header = T)
+bulk_deg <- read.table(file = "/Users/ds/Desktop/projects/mCRPC_lncRNA_analysis/results/mCRPC_PRAD_deg.txt", header = T, sep = "\t")
 
 
 #Map up and down regulated genes to clusters
@@ -210,7 +210,7 @@ bulk_deg <- bulk_deg %>% mutate(Alpha = ifelse(Cluster == "Unknown", 0.1, 1))
 
 
 #Read in DMRs from DSS in Zhou et al. 2020 Nature Genetics between mCRPC and PRAD
-dss <- read_tsv(file = "/Users/ds/Desktop/projects/lncRNA/results/DSS_mCPRC_PRAD.bed", col_names = c("chrom", "start", "end", "Diff", "Stat"))
+dss <- read_tsv(file = "/Users/ds/Desktop/projects/mCRPC_lncRNA_analysis//results/DSS_mCPRC_PRAD.bed", col_names = c("chrom", "start", "end", "Diff", "Stat"))
 dss <- GRanges(dss)
 regions <- GRanges(linc) #Convert lncRNAs to GRanges
 
@@ -218,10 +218,10 @@ regions <- GRanges(linc) #Convert lncRNAs to GRanges
 dss <- data.frame(linc, dss[nearest(x =  GRanges(regions), subject = dss),] ) %>% inner_join(bulk_deg, by = c("gene.name" = "Genes" )) %>% mutate(Sig = ifelse(gene.name %in% up$Genes & Diff < -0.05, "A", ifelse(gene.name %in% down$Genes & Diff > 0.05, "B", "Other")   ))
 
 #Plotting - DMR cutoff of 5% and logFC cutoff of 1
-plot <- dss %>% ggplot(aes(x = Diff * 100, y = logFC, color = Cluster, label= gene.name, alpha = Sig)) + geom_point(size= 1) + geom_vline(xintercept = c(-5,5), linetype = "dashed")  + geom_hline(yintercept = c(-1,1), linetype = "dashed") + geom_text_repel(data = dplyr::filter(dss, Sig %in% c("A", "B") & Cluster != "Unknown"), force =10, size = 2.5) + scale_alpha_manual(values = c(1,1,0.5))  + ylab("logFC mCRPC v.s. PRAD") + xlab("Methylation difference mCPRC - PRAD") + scale_color_manual(values = c("purple", "orange", "red", "black", "darkgreen", "navy", "grey")) + theme_classic()
-ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot)
+plot <- dss %>% ggplot(aes(x = Diff * 100, y = logFC, color = Cluster, label= gene.name, alpha = Sig)) + geom_point(size= 1) + geom_vline(xintercept = c(-5,5), linetype = "dashed")  + geom_hline(yintercept = c(-1,1), linetype = "dashed") + geom_text_repel(data = dplyr::filter(dss, Sig %in% c("A", "B") & Cluster != "Unknown"), force =10, size = 5) + scale_alpha_manual(values = c(1,1,0.5))  + ylab("logFC mCRPC v.s. PRAD") + xlab("Methylation difference mCPRC - PRAD") + scale_color_manual(values = c("purple", "orange", "red", "black", "darkgreen", "navy", "grey")) + theme_classic() + theme( text = element_text(size = 20))
+ggsave(filename = "/Users/ds/Desktop/plot.pdf", plot = plot, width = 10, height = 10)
 
-
+plot
 ```
 
 
