--- a/src/Figure.4/AR_Gviz.Rmd
+++ b/src/Figure.4/AR_Gviz.Rmd
@@ -23,11 +23,11 @@ target <- EnsDb.Hsapiens.v86 %>% ensembldb::filter(~ symbol == GOI) %>% genes()
 
 #READ IN DSS DMR REGIONS
 ```{r}
-dss <- read_csv(file = "/Users/ds/Desktop/projects/lncRNA/results/DSS_mCRPC_BN.csv", col_names = c("chrom", "start", "end", "Diff", "Stat"))
+dss <- read_csv(file = "/Users/ds/Desktop/projects/mCRPC_lncRNA_analysis//results/DSS_mCRPC_BN.csv", col_names = c("chrom", "start", "end", "Diff", "Stat"))
 dss$chrom <- paste0("chr", dss$chrom)
 dss <- dss %>% dplyr::filter(chrom == chr) %>% dplyr::select(-Stat) %>% mutate(Diff = Diff * 100) %>% GRanges()
 dTrack <- DataTrack(dss, name = "Methylation", background.title = "DarkOrchid4", fill = "DarkOrchid4")
-plotTracks(list(dTrack), from = start(target), to = end(target), type = c("histogram"), ylim = c(-30,0))
+#plotTracks(list(dTrack), from = start(target), to = end(target), type = c("histogram"), ylim = c(-30,0))
 
 
 
@@ -79,11 +79,11 @@ grtrack <- GeneRegionTrack( genome = "hg38",range = gene, chromosome = chr , nam
 atrack <- AnnotationTrack(hmr, name = "HMR", background.title = "darkred",  background.panel ="lightgrey", fill = "darkred", col = "darkred")
 arbtrack <- AnnotationTrack(metarbs, name = "AR", background.title = "darkgreen" , background.panel = "lightgrey", fill = "darkgreen", col = "darkgreen")
 frbtrack <- AnnotationTrack(metfrbs, name = "FOXA1", background.title = "darkorange" , background.panel = "lightgrey", fill = "darkorange", col = "darkorange")
-atactrack <- AnnotationTrack(h3ac, name = "K27ac", background.title = "black" , background.panel = "lightgrey", fill = "black", col = "black", )
+atactrack <- AnnotationTrack(h3ac, name = "H3K27ac", background.title = "black" , background.panel = "lightgrey", fill = "black", col = "black" )
 gtrack <- GenomeAxisTrack()
-itrack <- IdeogramTrack(genome = "hg38", chromosome = chr)
-pdf("/Users/ds/Desktop/plot.pdf", width = 10)
-plotTracks(list(gtrack, dTrack,arbtrack,frbtrack, atactrack, atrack,grtrack), from = start(target) -10000, to = end(target) + 10000, type = "histogram",ylim = c(-30,0)) + 
+#itrack <- IdeogramTrack(genome = "hg38", chromosome = chr)
+pdf("/Users/ds/Desktop/plot.pdf", width = 10, height = 10)
+plotTracks(list(gtrack, dTrack,arbtrack,frbtrack, atactrack, atrack,grtrack), from = start(target) -10000, to = end(target) + 10000, type = "histogram",ylim = c(-30,0), cex.title = 1.3, sizes=c(1,2,1,1,1,1,2) ) 
 dev.off()
 
 
