--- a/src/Figure.4/Enza_DEG_analysis.Rmd
+++ b/src/Figure.4/Enza_DEG_analysis.Rmd
@@ -90,7 +90,7 @@ bulk_deg <- topTable(efit, number = Inf, coef = 1) %>% data.frame(Genes = row.na
 #DE lncRNAs - FDR 25% and abs logFC > 1
 bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.25 & abs(logFC) > 1) %>% left_join( y = final_markers, by = c("Genes" = "gene"))
 #DE protein coding genes - FDR 25% and abs logFC > 1
-#bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.25 & abs(logFC) > 1) %>% left_join( y = pcg_markers, by = c("Genes" = "gene"))
+bulk_deg <- bulk_deg %>% dplyr::filter(adj.P.Val < 0.25 & abs(logFC) > 1) %>% left_join( y = pcg_markers, by = c("Genes" = "gene"))
 ```
 
 
@@ -101,7 +101,7 @@ bulk_deg$cluster <- bulk_deg$cluster %>% as.character()
 bulk_deg <- bulk_deg %>% mutate(Cluster = ifelse(is.na(cluster), "Unknown", cluster)) %>% mutate(Alpha = ifelse(Cluster == "Unknown", 0.8, 1))
 
 #Plot
-plot <- ggplot(bulk_deg, aes(x = logFC, y = -log10(adj.P.Val), color = Cluster, alpha = Alpha, label = Genes) ) + geom_point() + scale_color_manual(values = c("purple", "orange", "red", "black", "navy","grey" , "navy")) + geom_hline(yintercept = -log10(0.25), linetype= 'dashed') + geom_vline(xintercept = c(-1,1), linetype = 'dashed') + geom_text_repel(data = dplyr::filter(bulk_deg, abs(logFC) > 1 &adj.P.Val < 0.25 & Cluster !="Unknown" ), force = 0.8, size = 2.5) + ggtitle(label = "lncRNAs associated with AR region amplifications") + theme_classic()
+plot <- ggplot(bulk_deg, aes(x = logFC, y = -log10(adj.P.Val), color = Cluster, alpha = Alpha, label = Genes) ) + geom_point() + scale_color_manual(values = c("purple", "orange", "red", "black", "darkgreen","navy" , "grey")) + geom_hline(yintercept = -log10(0.25), linetype= 'dashed') + geom_vline(xintercept = c(-1,1), linetype = 'dashed') + geom_text_repel(data = dplyr::filter(bulk_deg, abs(logFC) > 1 &adj.P.Val < 0.25 & Cluster !="Unknown" ), force = 0.8, size = 2.5) + ggtitle(label = "Protein coding genes associated with AR region amplifications") + theme_classic()
 ggsave(plot = plot, filename = "/Users/ds/Desktop/plot.pdf", height = 5)
 
 #Write to disk
@@ -172,20 +172,26 @@ df <- gsva.es %>% t() %>% data.frame(Patient.ID = row.names(.), Pca.lncrna = .) 
 row.names(df) <- df$Patient.ID
 df$AR.GEX <- as.numeric(df$AR.GEX)
 df$AR.VIPER <- as.numeric(df$AR.VIPER)
-p1 <- df %>% dplyr::select(c(Pca.lncrna,AR.VIPER, AR.GEX)) %>% gather(key = "Signature", value = "GEX", -Pca.lncrna) %>% ggplot(aes(x = Pca.lncrna, y = GEX, color = Signature)) %>% facet(facet.by = "Signature", panel.labs.font = list(face = "bold", size = 20), scales = 'free') + geom_point() + geom_smooth(method = "lm") + stat_cor() + scale_color_manual(values = c("navy", "darkred")) + theme_classic() + xlab("AR upregulated Pca-lncRNAs") + theme(axis.text.x = element_text( color="black", size=0, angle=45), text = element_text(size = 20))
-pdf("/Users/ds/Desktop/plot.pdf", width = 10)
-p1
+
+
+
+p1 <- df %>% dplyr::select(c(Pca.lncrna,AR.VIPER, AR.GEX)) %>% gather(key = "Signature", value = "GEX", -Pca.lncrna) %>% ggplot(aes(x = Pca.lncrna, y = GEX, color = Signature)) %>% facet(facet.by = "Signature", panel.labs.font = list(face = "bold", size = 20), scales = 'free') + geom_point() + geom_smooth(method = "lm") + stat_cor(size = 7) + scale_color_manual(values = c("navy", "darkred")) + theme_classic() + xlab("AR upregulated Pca-lncRNAs") + theme(axis.text.x = element_text( color="black", size=0, angle=45), text = element_text(size = 20))
+pdf("/Users/ds/Desktop/plot.pdf", width = 7)
+p4
 dev.off()
+
 
 #Boxplot for AR lncRNAs at Baseline v.s Progression on Enza - split by PSA response (>50% decline in PSA at 12 mo)
 p2 <- ggboxplot(
   dplyr::filter(df, PSA != "Unknown"), x = "Timepoint", y = "Pca.lncrna", fill = "darkred", alpha = 0.5,
-  facet.by = "PSA", draw_quantiles = 0.5, add = 'jitter')+ stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR regulated Pca-protein coding genes")
-
+  facet.by = "PSA", draw_quantiles = 0.5, add = 'jitter')+ stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR regulated Pca\n protein coding genes") + theme( text = element_text(size = 20))
+p2
 
 #Boxplot for AR lncRNAs and 3 AR+/NE- to AR-/NE- converters
-p3 <- dplyr::filter(df,grepl(pattern ="DTB_080|DTB_135|DTB_210", x = Patient.ID)) %>% mutate(Group = "Converters") %>% ggboxplot( , x = "Timepoint", y = "AR.VIPER", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter" , facet.by = "Group", width = 0.5) + stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR VIPER score")
+p3 <- dplyr::filter(df,grepl(pattern ="DTB_080|DTB_135|DTB_210", x = Patient.ID)) %>% mutate(Group = "Converters") %>% ggboxplot( , x = "Timepoint", y = "AR.VIPER", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter" , facet.by = "Group", width = 0.5) + stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR VIPER score") + theme( text = element_text(size = 20))
 
+
+p4 <- dplyr::filter(df,grepl(pattern ="DTB_080|DTB_135|DTB_210", x = Patient.ID)) %>% mutate(Group = "Converters") %>% ggboxplot( , x = "Timepoint", y = "Pca.lncrna", fill = "darkblue", alpha = 0.5, draw_quantiles = 0.5,add = "jitter" , facet.by = "Group", width = 0.5) + stat_compare_means(paired = T, method = 't.test', label.x.npc = 0.5) + ylab("AR regulated Pca\n protien coding genes") + theme( text = element_text(size = 20))
 
 
 ```
