--- a/src/Figure.3/Progress_Gviz.Rmd
+++ b/src/Figure.3/Progress_Gviz.Rmd
@@ -86,8 +86,8 @@ gtrack <- GenomeAxisTrack()
 
 
 
-pdf("/Users/ds/Desktop/plot.pdf", width = 10, height = 10)
-plotTracks(list(gtrack, dTrack,arbtrack, atactrack, atrack, grtrack), from = start(target), to = end(target), type = "histogram",ylim = c(-30,0), cex.title = 1.3, sizes=c(1,2,1,1,1,1))
+pdf("/Users/ds/Desktop/plot.pdf", width = 10, height = 5)
+plotTracks(list(gtrack, dTrack,arbtrack, atactrack, atrack, grtrack), from = start(target), to = end(target), type = "histogram",ylim = c(-30,0), cex.title = 1.5, sizes=c(1,2,1,1,1,1), title.width = 4, rot.title = 0)
 dev.off()   
            
 
